# qotd

./: .gitignore  CMakeLists.txt  README.md
src/: qotd.c
